<resources>
    <string name="app_name">CalculatorApp</string>

    <!-- Assign strings to each button so it's not hard coded -->
    <!-- Numbers -->

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!-- Other -->
    <string name="delete"></string>
    <string name="clearAll">AC</string>
    <string name="parentheses">( )</string>
    <string name="sign">±</string>
    <string name="decimal">.</string>

    <string name="display">enter</string>

    <!-- Operations -->
    <string name="exponent">𝑥ⁿ</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">–</string>
    <string name="add">+</string>
    <string name="equals">=</string>


</resources>